--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     })()
   </script>
 </head>
-<body class="font-sans">
+<body
+  class="overflow-x-hidden font-sans min-h-screen flex flex-col justify-center items-center bg-no-repeat bg-center bg-cover bg-[#100f37]"
+  style="background-image: url('/bg.jpg');"
+>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
